
SUBDIRS = Parte-I Parte-II Parte-III  Parte-V Parte-VI

## Na Parte IV do livro, não tem código a ser compilado pelo sistema, 
## apenas listagens informativas.


AUTOMAKE_OPTIONS = gnu ##foreign

EXTRA_DIST = 	Parte-IV autoscan.log configure.scan configure.ac \
		Makefile.am README  LEIAME*.* converter-para-DOS-WINDOWS \
		ListaArquivos  make-all  bookmarks-prog.html \
		AUTHORS COPYING ChangeLog INSTALL README TODO NEWS \
		UML INSTALACAO	 Errata.html equacao_pi.jpg \
		depcomp install-sh missing mkinstalldirs 
