## Lista dos programas a serem gerados
bin_PROGRAMS = 	List_5_3	List_6_1	List_6_2	List_7_1	List_7_2 \
	List_7_3	List_7_4	List_8_1	List_11_1	List_11_2 \
	List_11_3	List_11_4	List_11_7	List_13_1	List_13_2  \
	List_13_3	List_14_1	List_14_2	\
	List_16_1	List_16_4	List_17_1 List_17_10	List_18_1  \
	List_18_2	List_20_1	List_21_1  	List_21_2  \
	List_21_3	List_22_1	List_22_2	List_22_3  \
	List_22_4	List_22_5	List_23_1	List_23_2 \
	List_24_0 	List_24_1	List_24_2	List_24_3  \
	List_24_4	List_25_1	List_25_2	List_25_3	List_25_4  \
	List_25_6	List_26_1	List_26_2	List_27_1  \
	List_27_2	List_27_3	List_27_4	List_27_5 \
	List_25_5	List_19_3 	List_15_3 	List_15_4  	List_16_6	

## Listagens com bug´s  List_16_6 List_15_3

EXTRA_DIST = List-11-5-TPonto.h    List-16-2-TElipse.h         List-17-2-TPessoa.h  \
	List-17-6-TFuncionario.h       List-19-1-TPontoComSobrecarga.h	List-15-1-TCirculo.h \
	 List-16-5-TCirculoElipse.h  List-17-4-TAluno.h   List-17-8-TAlunoFuncionario.h  List-5-1-TAplicacao.h \
	*.out dados_simulacao.dat *.dev extra

## Lista com o nome do programa e os códigos fontes utilizados
List_5_3_SOURCES = List-5-2-TAplicacao.cpp List-5-3-programa.cpp
List_6_1_SOURCES = List-6-1-novaLinha-tab-beep.cpp
List_6_2_SOURCES = List-6-2-cout-cin.cpp
List_7_1_SOURCES = List-7-1-tipos.cpp
List_7_2_SOURCES = List-7-2-signed-unsigned.cpp
List_7_3_SOURCES = List-7-3-complex.cpp
List_7_4_SOURCES = List-7-4-vector-1.cpp
List_8_1_SOURCES = List-8-1-namespace.cpp
List_11_1_SOURCES = List-11-1-funcao-por-valor-referencia-ponteiro.cpp
List_11_2_SOURCES = List-11-2-class-atributo-metodo-normal.cpp
List_11_3_SOURCES = List-11-3-class-atributo-metodo-const.cpp
List_11_4_SOURCES = List-11-4-class-atributo-metodo-static.cpp
List_11_7_SOURCES = List-11-7-ProgTPonto.cpp List-11-6-TPonto.cpp
List_13_1_SOURCES = List-13-1-ProgTPontoDinamico.cpp List-11-6-TPonto.cpp
List_13_2_SOURCES = List-13-2-auto-ptr.cpp
List_13_3_SOURCES = List-13-3-referencia.cpp
List_14_1_SOURCES = List-14-1-class-construtor-copia.cpp
List_14_2_SOURCES = List-14-2-ObjDinamico.cpp
List_15_3_SOURCES = List-15-3-especificador-heranca.cpp
List_15_4_SOURCES = List-15-4-ambiguidade.cpp
List_16_1_SOURCES = List-16-1-herancaMultiplaVirtual.cpp
List_16_4_SOURCES = List-16-4-UsandoTPontoTCirculoTElipse.cpp List-11-6-TPonto.cpp List-15-2-TCirculo.cpp List-16-3-TElipse.cpp
List_16_6_SOURCES = List-16-6-TCirculoElipse.cpp

List_17_1_SOURCES = List-17-1-Polimorfismo.cpp List-11-6-TPonto.cpp List-15-2-TCirculo.cpp List-16-3-TElipse.cpp

List_17_10_SOURCES = List-17-10-class-Heranca-Multipla.cpp List-17-3-TPessoa.cpp List-17-5-TAluno.cpp 	List-17-7-TFuncionario.cpp List-17-9-TAlunoFuncionario.cpp
List_18_1_SOURCES = List-18-1-friend-classe.cpp
List_18_2_SOURCES = List-18-2-friend-metodo.cpp

List_19_3_SOURCES = List-19-3-TesteTPontoComSobrecarga.cpp List-19-2-TPontoComSobrecarga.cpp

List_20_1_SOURCES = List-20-1-associacoes.cpp
List_21_1_SOURCES = List-21-1-explicit.cpp
List_21_2_SOURCES = List-21-2-dynamic-cast.cpp
List_21_3_SOURCES = List-21-3-typeid.cpp
List_22_1_SOURCES = List-22-1-excecoes1.cpp
List_22_2_SOURCES = List-22-2-excecoes2.cpp
List_22_3_SOURCES = List-22-3-excecoes3.cpp
List_22_4_SOURCES = List-22-4-excecoes4.cpp
List_22_5_SOURCES = List-22-5-excecoes5.cpp

List_23_1_SOURCES = List-23-1-Templates.cpp
List_23_2_SOURCES = List-23-2-Templates.cpp

List_24_0_SOURCES = List-24-0-locale.cpp
List_24_1_SOURCES = List-24-1-Entrada-Saida1.cpp
List_24_2_SOURCES = List-24-2-Entrada-Saida-iomanip.cpp
List_24_3_SOURCES = List-24-3-Entrada-Saida3.cpp
List_24_4_SOURCES = List-24-4-Entrada-Saida-sstrean.cpp
List_25_1_SOURCES = List-25-1-Entrada-Saida-fstream.cpp
List_25_2_SOURCES = List-25-2-fstream-com-comentario.cpp
List_25_3_SOURCES = List-25-3-Entrada-Saida-fstream-LeituraGravacaoDeObjetos.cpp
List_25_4_SOURCES = List-25-4-seekg-seekp.cpp
List_25_5_SOURCES = List-25-5-pfstream.cpp
List_25_6_SOURCES = List-25-6-Entrada-Saida-Redirecionamento.cpp
List_26_1_SOURCES = List-26-1-string.cpp
List_26_2_SOURCES = List-26-2-interfaceShell.cpp
List_27_1_SOURCES = List-27-1-complex.cpp
List_27_2_SOURCES = List-27-2-bitset1.cpp
List_27_3_SOURCES = List-27-3-bitset2.cpp
List_27_4_SOURCES = List-27-4-bitset3.cpp
List_27_5_SOURCES = List-27-5-funcao-math.cpp

