bin_PROGRAMS = 	List_29_1 List_29_2 List_29_3 \
		List_30_1 List_30_2 \
		List_31_1 List_31_2 \
		List_32_1 List_32_2 \
		List_33_1 List_33_2 

List_29_1_SOURCES = List-29-1-vector-2.cpp
List_29_2_SOURCES = List-29-2-list.cpp
List_29_3_SOURCES = List-29-3-deque.cpp  

List_30_1_SOURCES = List-30-1-stack-2.cpp
List_30_2_SOURCES = List-30-2-queue.cpp

List_31_1_SOURCES = List-31-1-set.cpp  
List_31_2_SOURCES = List-31-2-map2.cpp

List_32_1_SOURCES = List-32-1-list2.cpp
List_32_2_SOURCES = List-32-2-vector-3.cpp  


List_33_1_SOURCES = List-33-1-functional.cpp
List_33_2_SOURCES = List-33-2-generic.cpp

EXTRA_DIST = Makefile.am vector.dat readwrite.dat *.out 
