bin_PROGRAMS = List_B_1	List_B_2	\
	List_C_1	List_C_2	List_C_3	List_C_4	\
	List_D_1	List_D_2	List_D_3	List_D_4	\
	List_D_5	List_D_6	List_D_7	\
	List_E_1	List_E_2	List_E_3	List_E_4	\
	List_E_5	List_E_6	List_E_7	\
	List_F_1	\
	List_G_1	List_G_1_5 List_G_2 List_G_3

EXTRADIST =  Makefile.am *.out *.dev 

List_B_1_SOURCES= List-B-1-const.cpp
List_B_2_SOURCES= List-B-2-escopo-a.cpp  List-B-3-escopo-b.cpp
List_C_1_SOURCES= List-C-1-comparacao.cpp
List_C_2_SOURCES= List-C-2-sizeof2.cpp
List_C_3_SOURCES= List-C-3-incremento.cpp
List_C_4_SOURCES= List-C-4-while3.cpp
List_D_1_SOURCES= List-D-1-for.cpp
List_D_2_SOURCES= List-D-2-for-for.cpp
List_D_3_SOURCES= List-D-3-do-while.cpp
List_D_4_SOURCES= List-D-4-switch.cpp
List_D_5_SOURCES= List-D-5-while.cpp
List_D_6_SOURCES= List-D-6-while2.cpp
List_D_7_SOURCES= List-D-7-break-e-continue.cpp
List_E_1_SOURCES= List-E-1-entradalinhacomando.cpp
List_E_2_SOURCES= List-E-2-funcao-recursiva.cpp
List_E_3_SOURCES= List-E-3-funcao.cpp
List_E_4_SOURCES= List-E-4-funcao-retorno-void.cpp
List_E_5_SOURCES= List-E-5-funcao-parametro-const.cpp
List_E_6_SOURCES= List-E-6-funcao-inline.cpp
List_E_7_SOURCES= List-E-7-funcao-randomico.cpp
List_F_1_SOURCES= List-F-1-endereco-sizeof.cpp
List_G_1_SOURCES= List-G-1-struct.cpp
List_G_1_5_SOURCES=List-G.1.5-EstruturasAninhadas.cpp
List_G_2_SOURCES= List-G-2-union.cpp
List_G_3_SOURCES= List-G.3-Enumeracoes.cpp



