bin_PROGRAMS =  Polimorfismo_estatico

Polimorfismo_estatico_SOURCES =   List-17-1-Polimorfismo.cpp
Polimorfismo_estatico_LDADD= libTPontostatic.la
Polimorfismo_estatico_LDFLAGS=-static 

lib_LTLIBRARIES= libTPontostatic.la 
libTPontostatic_la_SOURCES=List-11-6-TPonto.cpp  List-15-2-TCirculo.cpp  List-16-3-TElipse.cpp
libTPontostatic_la_LDFLAGS=-static
